# TypeCorrect

./: .gitignore  TypeCorrect.spec  app_icon.icns  key_layout.json  pyproject.toml  readme.md  type_correct.py
